[project]
name = "rostofu"
version = "0.1.0"
description = "ROS2 package for tofu application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
#url = "http://mirrors.cloud.aliyuncs.com/pypi/simple/" # 内网
